<resources>
    <string name="app_name">Huerta Escolar</string>
    <string name="title_home">Objetivos</string>
    <string name="title_dashboard">La Planta</string>
    <string name="title_notifications">Caracteristicas</string>
    <string name="title_garden">Huerta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="inner_fragment">•	Brindar a los docentes y estudiantes la oportunidad interactuar a través de una APP con la huerta escolar de plantas medicinales y frutos comestibles para reconocer su importancia y propiedades.</string>
    <string name="inner_fragment_two">•	Contribuir al crecimiento de los estudiantes relacionando los temas vistos de forma teórica con la práctica a través de la interacción con dispositivos móviles.</string>
    <string name="inner_fragment_three">•	Favorecer la motivación de los estudiantes con nuevas estrategias didácticas basadas en el uso de las TIC para favorecer las competencias digitales. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="inner_plants_title">Las Plantas</string>
    <string name="inner_message_one">Las plantas son organismos vivos autosuficientes pertenecientes al mundo vegetal que pueden habitar en la tierra o en el agua (Ramos, 1999). Las plantas son de gran importancia para la vida humana dada su producción de oxígeno. De las plantas se pueden extraer medicinas curativas y letales venenos. </string>
    <string name="inner_plants_subtitle">Partes de la planta</string>
    <string name="inner_description">Las partes de la planta son descritas por Ruiz (2015) de la siguiente manera. </string>
    <string name="inner_details_1"><b><i>• La raíz:</i></b> es el órgano que se encuentra debajo de la tierra, su función es sujetar la planta y absorber sales, minerales, y el agua del suelo. </string>
    <string name="inner_details_2"><b><i>• El tallo:</i></b> es la parte opuesta de la raíz, crece en sentido vertical hacia la luz del sol. A partir de él se desarrollan las ramas en donde nacen las hojas, flores y frutos. </string>
    <string name="inner_details_3"><b><i>• Las hojas:</i></b> es la parte de la planta encargada de realizar la fotosíntesis, así como la respiración y la transpiración vegetal. </string>
    <string name="inner_details_4"><b><i>• Las flores:</i></b> son el órgano reproductor de la planta, a partir de ellas se producen los frutos y las semillas. </string>
    <string name="inner_details_5"><b><i>• Los frutos:</i></b> el fruto se origina por el engrosamiento de las paredes del ovario o en su defecto del engrosamiento del receptáculo floral según sea el caso. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="inner_steps_one_title">Pasos para elaborar una huerta.</string>
    <string name="step_1"><b><i>Paso 1:</i></b> Preparar en terreno. </string>
    <string name="data_s1">Primero hay que limpiar el lugar para que no haya vidrios, alambres, plásticos, etc. y colocar un cerco con madera o mallas de cinto. Días antes de sembrar se debe remover la tierra y nivelarla con el rastrillo, el día de la siembra o transplante se puede colocar una cantidad considerable de abono. </string>
    <string name="step_2"><b><i>Paso 2:</i></b> Seleccionar las plantas a sembrar.</string>
    <string name="data_s2">Analizando la capacidad y tamaño del terreno y las propiedades de este se deben seleccionar las plantas a sembrar. </string>
    <string name="step_3"><b><i>Paso 3:</i></b> La siembra.</string>
    <string name="data_s3">Se debe aprovechar bien el terreno. Las semillas grandes, fáciles de manejar y fuertes para germinar, se siembran directamente en el lugar donde crecerán. Las pequeñas se deben tratar con mayor cuidado.</string>
    <string name="step_4"><b><i>Paso 4:</i></b> Transplante.</string>
    <string name="data_s4">El transplante se hace cuando las plantas tienen tres o cuatro hojas. Se riega bien el almacigo, se sacan las plantas con la ayuda de una cuchara o una pinza delicada, se abren los agujeros y se transplanta la planta evitando desprender la tierra de las raíces. Se usa abono para tapar los hoyos. Se presiona la tierra junto a la planta con ambas manos para que queden firmes y se riega alrededor de las pequeñas plantas. </string>
    <string name="step_5"><b><i>Paso 5:</i></b> Cuidados principales de una huerta</string>
    <string name="data_s5">En la huerta es preciso prestarle algunos cuidados:</string>
    <string name="item1">•	Riegos.</string>
    <string name="item2">•	Trasplantes.</string>
    <string name="item3">•	Proteger del sol fuerte al suelo y plantas.</string>
    <string name="item4">•	Realizar podas y desbrotes</string>
    <string name="characteristic_plant">Caracteristica</string>
    <string name="science_name">Nombre Cientifico</string>
    <string name="name">Nombre</string>
    <string name="select">Seleccionar</string>
    <string name="save">Guardar</string>
</resources>
