<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLength="11"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <!--Valor-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_subtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/science"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/science_name"
                    android:inputType="text"
                    android:maxLength="11"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <!--Factura Pagada-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/characteristic"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:hint="@string/characteristic_plant"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <!--Botones-->
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTake"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/select"
                    android:textColor="@color/colorLight" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>